kustomize/portainer/overlays/nghz.net/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-https
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
      - portainer.nghz.net
    secretName: portainer-certificates
  rules:
  - host: portainer.nghz.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-http-to-https@kubernetescrd
spec:
  rules:
  - host: portainer.nghz.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: portainer-agent-https
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     kubernetes.io/preserve-host: "true"
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure
#     traefik.ingress.kubernetes.io/router.tls: "true"
# spec:
#   tls:
#   - hosts:
#       - portainer.nghz.net
#     secretName: portainer-certificates
#   rules:
#   - host: portainer.nghz.net
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: portainer
#             port:
#               number: 9000
# ---
